--- a/live_event.html
+++ b/live_event.html
@@ -79,8 +79,11 @@
           <div class="card h-100">
             <img src="img/tech.jpg" class="card-img-top" alt="..." height="200px" width="10px">
             <div class="card-body">
-               <h5 class="card-title">Hackathon</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+               <h5 class="card-title"><strong>Hackathon</strong></h5>
+            <p class="card-text">Hackathons are popular in the tech industry and are used as a way to spur 
+                innovation, build community, and promote collaboration among developers and other tech 
+                professionals.
+            </p>
             </div>
             <div class="card-footer">
               <small class="text-muted">We are live right now</small><span class="dot"></span> 
@@ -91,8 +94,10 @@
             <div class="card h-100">
               <img src="img/tech2.jpg" class="card-img-top" alt="..." height="200px" width="10px">
               <div class="card-body">
-                <h5 class="card-title">Ideathon</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title"><strong>Ideathon</strong></h5>
+                <p class="card-text">Ideathons are often used in the context of innovation, entrepreneurship, 
+                    and social impact, and can be a powerful way to generate new ideas and foster collaboration 
+                    among participants.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>  
@@ -103,8 +108,10 @@
             <div class="card h-100">
               <img src="img/tech3.jpg" class="card-img-top" alt="..." height="200px" width="10px">
               <div class="card-body">
-                <h5 class="card-title">Coding competition</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title"><strong>Coding Competition</strong></h5>
+                <p class="card-text">Coding competitions are popular among programmers and software developers, 
+                    and can be a fun and challenging way to improve one's coding skills and network with other 
+                    professionals in the field.</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
