--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <div class="col-lg-7  bannertext">
                     <h1>GOHACKATHON</h1>
                     <h6>Presents</h6>
-                    <h2><strong>INNOVATION INVASION</strong></h2>
-                    <p><strong>A hackathon where crazy ideas become reality</strong><br>
+                    <h2><strong>GIT AND GITHUB WEBINAR</strong></h2>
+                    <p><strong>Collaborate, Innovate, and Hack Your Way to Success!</strong><br>
                         <!-- We create an eco-system of industry academia partnership and help in continuous and
                         sustainable development of innovative ideas, which are impactful for the growing economy and
                         society. -->
