Change in Index About and Traing Pages

--- a/about.html
+++ b/about.html
@@ -104,15 +104,15 @@
                     we have delivered quality staffing solutions, skill development projects, Integrated 
                     Facility Management Services. <br>
                 </p>
-                <p>
-                    Work Integrated Skill Training & Apprenticeship (WISTA) <br>
-                    Staffing Solutions including Contract Labour & Payroll Services. <br>
-                    Integrated Facility Management Services. <br>
-                    Vocational & Skill Development Projects (NAPS, Flexi-MoU, B. Voc., DDU-GKY & PMKVY) <br>
-                    Design and Deliver impactful CSR initiatives. <br>
-                    Catering Services in Industries, Hospitals, Skill Development Centers, Hostels & other Establishments. <br>
-                    Research & Development in Agritech & Allied Program. <br>
-                </p>
+                <ul>
+                    <li>Work Integrated Skill Training & Apprenticeship (WISTA)</li>
+                    <li>Staffing Solutions including Contract Labour & Payroll Services.</li>
+                    <li>Integrated Facility Management Services.</li>
+                    <li>Vocational & Skill Development Projects (NAPS, Flexi-MoU, B. Voc., DDU-GKY & PMKVY)</li>
+                    <li>Design and Deliver impactful CSR initiatives.</li>
+                    <li>Catering Services in Industries, Hospitals, Skill Development Centers, Hostels & other Establishments.</li>
+                    <li>Research & Development in Agritech & Allied Program.</li>
+                </ul>
                 <a href="https://mangosorange.co.in/">
                     <button class="btn btn-primary">Know More</button>
                 </a>
@@ -131,11 +131,11 @@
                     and build commercial farming setup for interested educational institutions, private bodies 
                     and individuals, farmers and investors.<br>
                 </p>
-                <p>
-                    <strong>Research and Development</strong> <br>
-                    <strong>Modern Innovative Farming</strong> <br>
-                    <strong>Educating and Consulting</strong>
-                </p>
+                <ul>
+                    <li>Research and Development</li>
+                    <li>Modern Innovative Farming</li>
+                    <li>Educating and Consulting</li>
+                </ul>
                 <a href="https://mangosorangeagritech.in/">
                     <button class="btn btn-primary">Know More</button>
                 </a>
