--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         society. -->
                         We are trying to build a community where everyone can connect, learn, and grow together.
                     </p> <br>
-                    <a href="registeration/registration.php">
+                    <a href="#">
                         <button class="btn btn-primary px-5 py-2 primary-btn">
                             REGISTER NOW
                         </button>
@@ -175,9 +175,8 @@
                     <div class="article-body">
                         <h2>Upcoming Events</h2>
                         <p>
-                            These events often focus on specific themes or industries, such as technology, 
-                            healthcare, or sustainability, and are often organized by companies, universities, 
-                            or other organizations looking to stimulate innovation.
+                            Are you seeking to solve some of the most pressing real world issues, but don’t know where to start?
+                            Your idea doesn’t need to be original! You can take inspiration from others. Come join GoHackathon Events.
                         </p>
                         <a class="btn btn-primary" href="upcoming_events.html" role="button">Know More</a>
                     </div>
@@ -191,9 +190,10 @@
                     <div class="article-body">
                         <h2>Past Events</h2>
                         <p>
-                            They are also sometimes organized by universities or other educational institutions 
-                            as a way to give students experience working on real-world software projects to engage 
-                            with the tech community and innovation.
+                            Since last year, GoHackathon and its team have organised an event. 
+                            <strong>SAMADHAN</strong> at BTKIT Dwarahat and 
+                            <strong>KRISHI-VIKALP</strong> at SSIM New Delhi 
+                            are two events that have previously taken place.
                         </p>
                         <a class="btn btn-primary" href="past_events.html" role="button">Know More</a>
                     </div>
@@ -216,10 +216,9 @@
                     <div class="article-body">
                         <h2>AI and Machine Learning</h2>
                         <p>
-                            AI and machine learning are rapidly developing fields that have the potential to 
-                            revolutionize many industries and change the way we live and work. It involves the 
-                            development of computer systems that can perform tasks that would normally require 
-                            human intelligence. 
+                            This course provides students with a comprehensive introduction to data science and
+                             machine learning. Students will learn how to extract insights and knowledge from 
+                             large data sets using popular data analysis and machine learning techniques.  
                         </p>
                         <a class="btn btn-primary" href="training.html" role="button">Know More</a>
                     </div>
@@ -233,10 +232,9 @@
                     <div class="article-body">
                         <h2>Full Stack Development</h2>
                         <p>
-                            Full stack development is a complex and rapidly evolving field that requires a 
-                            broad range of skills and knowledge. However, it can also be a rewarding and 
-                            lucrative career path for those who are passionate about web development and enjoy 
-                            working on both the front-end and back-end of applications.
+                            Students receive a thorough introduction to database and full stack development in 
+                            this course. With the technical understanding of front-end and back-end programming, 
+                            students will discover the nuances of data structures and algorithms.
                         </p>
                         <a class="btn btn-primary" href="training.html" role="button">Know More</a>
                     </div>
@@ -250,11 +248,9 @@
                     <div class="article-body">
                         <h2>AWS and Devops</h2>
                         <p>
-                            AWS and DevOps are closely related, as many DevOps practices rely on cloud 
-                            infrastructure and services like those provided by AWS. By leveraging AWS, 
-                            DevOps teams can quickly and easily provision and configure infrastructure, 
-                            deploy applications, and automate testing and deployment processes and 
-                            deliver applications and services faster and more reliably.
+                            Develop your knowledge of containers, deployment strategies, and immutable infrastructure. 
+                            Create a portfolio for cloud computing containing labs, projects, and a capstone project. 
+                            Discover AWS, DevOps, and more. Gain Practical Exposure to Projects & Laboratories. 
                         </p>
                         <a class="btn btn-primary" href="training.html" role="button">Know More</a>
                     </div>
@@ -276,9 +272,9 @@
                     <div   class="card-body">
                         <h3 class="card-title">BTKIT DWARAHAT</h3>
                         <p class="card-text-index">
-                            To promote and enhance skill development and employment generation activities for 
-                            youth, MSPL is working under various schemes to impart skills in various trades & 
-                            locations
+                            GoHackathon works with BTKIT's Training and Placement cell to provide technical and 
+                            professional exposure, enhance student skills and bring better job opportunities to 
+                            the institute.
                         </p>
                         <!-- <p class="text-black-50">19/01/2023</p> -->
                         <p><a class="btn btn-primary" href="#" role="button">Know More</a></p>
@@ -293,7 +289,7 @@
                     <div   class="card-body">
                         <h3 class="card-title">SSIM DELHI</h3>
                         <p class="card-text-index">
-                            The incubation Center will be a research platform for students, industry, alumni, 
+                            GoHackathon works with SSIM to provide research platform for students, industry, alumni, 
                             start-ups, small and medium enterprises, faculty and researchers by helping them 
                             technology innovations.
                         </p>
@@ -348,9 +344,8 @@
                     <div class="card-body">
                         <h3 class="card-title">WIT DEHRADUN</h3>
                         <p class="card-text-index">
-                            Skill Development is a powerful tool to empower the people and improves their 
-                            social acceptance. It is complemented by a good economic growth and enhances 
-                            employability.
+                            GoHackathon works with WIT to promote and enhance skill development and employment generation 
+                            activities with relevant skills & On the Job Training required for making them employable.
                         </p>
                         <p><a class="btn btn-primary" href="#" role="button">Know More</a></p>
                         <!-- <p class="text-black-50">11/10/2022</p> -->
