--- a/training.html
+++ b/training.html
@@ -99,10 +99,9 @@
                             <div class="card-body">
                                 <h4>AI and Machine Learning</h4>
                                 <p>
-                                    AI and machine learning are rapidly developing fields that have the potential to 
-                                    revolutionize many industries and change the way we live and work. It involves the 
-                                    development of computer systems that can perform tasks that would normally require 
-                                    human intelligence. 
+                                    This course provides students with a comprehensive introduction to data science and
+                                     machine learning. Students will learn how to extract insights and knowledge from 
+                                     large data sets using popular data analysis and machine learning techniques.  
                                 </p>
                                 <a class="btn btn-primary" href="#" role="button">Buy Now</a>
                                 <a class="btn btn-primary" href="#" role="button">Know More</a>
@@ -115,10 +114,9 @@
                             <div class="card-body">
                                 <h4>Full Stack Development</h4>
                                 <p>
-                                    Full stack development is a complex and rapidly evolving field that requires a 
-                                    broad range of skills and knowledge. However, it can also be a rewarding and 
-                                    lucrative career path for those who are passionate about web development and enjoy 
-                                    working on both the front-end and back-end of applications.
+                                    Students receive a thorough introduction to database and full stack development in 
+                                    this course. With the technical understanding of front-end and back-end programming, 
+                                    students will discover the nuances of data structures and algorithms.
                                 </p>
                                 <a class="btn btn-primary" href="#" role="button">Buy Now</a>
                                 <a class="btn btn-primary" href="#" role="button">Know More</a>
@@ -131,11 +129,9 @@
                             <div class="card-body">
                                 <h4>AWS and Devops</h4>
                                 <p>
-                                    AWS and DevOps are closely related, as many DevOps practices rely on cloud 
-                                    infrastructure and services like those provided by AWS. AWS, 
-                                    DevOps teams can quickly and easily provision and configure infrastructure, 
-                                    deploy applications, and automate testing and deployment processes and 
-                                    deliver applications.
+                                    Develop your knowledge of containers, deployment strategies, and immutable infrastructure. 
+                                    Create a portfolio for cloud computing containing labs, projects, and a capstone project. 
+                                    Discover AWS, DevOps, and more. Gain Practical Exposure to Projects & Laboratories. 
                                 </p>
                                 <a class="btn btn-primary" href="#" role="button">Buy Now</a>
                                 <a class="btn btn-primary" href="#" role="button">Know More</a>
@@ -151,140 +147,43 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col-lg-4">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img src="img/tech2.jpg" alt="">
                             <div class="card-body">
                                 <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary"
-                                            onclick="window.location.href='checkout.html'">Buy This Course</button>
-                                    </div>
-                                </div>
+                                    lead-in to additional content. This content is a little bit longer.
+                                </p>
+                                <a class="btn btn-primary" href="#" role="button">Buy Now</a>
+                                <a class="btn btn-primary" href="#" role="button">Know More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img src="img/tech3.jpg" alt="">
                             <div class="card-body">
                                 <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary"
-                                            onclick="window.location.href='checkout.html'">Buy This Course</button>
-                                    </div>
-                                </div>
+                                    lead-in to additional content. This content is a little bit longer.
+                                </p>
+                                    <a class="btn btn-primary" href="#" role="button">Buy Now</a>
+                                    <a class="btn btn-primary" href="#" role="button">Know More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img src="img/tech4.jpg" alt="">
                             <div class="card-body">
                                 <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary"
-                                            onclick="window.location.href='checkout.html'">Buy This Course</button>
-                                    </div>
-                                </div>
+                                    lead-in to additional content. This content is a little bit longer.
+                                </p>
+                                <a class="btn btn-primary" href="#" role="button">Buy Now</a>
+                                <a class="btn btn-primary" href="#" role="button">Know More</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- <div class="album py-5 bg-light">
-            <div class="container"> 
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <div class="col-lg-4">
-                        <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary"
-                                            onclick="window.location.href='checkout.html'">Buy This Course</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary"
-                                            onclick="window.location.href='checkout.html'">Buy This Course</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary"
-                                            onclick="window.location.href='checkout.html'">Buy This Course</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
     </main>
 
