--- a/past_events.html
+++ b/past_events.html
@@ -87,10 +87,10 @@
                                     <p class="card-text"><strong>Event Name:- </strong>KRISHI-VIKALP<br>
                                         <strong>Event Date:- </strong>25th Feb 2023 <br>
                                         <strong>Event Venue:- </strong>Sri Sukhmani Institute of Management, Dwarka, New Delhi <br>
-                                        <a href="#">Participants</a> <br>
+                                        <a href="participants.html">Participants</a> <br>
                                         <a href="#">Winners</a>
                                     </p>
-                                    <a class="btn btn-primary" href="contact.html" role="button">Know More</a>
+                                    <a class="btn btn-primary" href="krishi-vikalp.html" role="button">Know More</a>
                                 </div>
                             </div>
                         </div>
